--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -43,7 +43,7 @@ language = getRoutesForImage(language);
 				) : (
 					<LinkButtonProjects
 						id={name + "id"}
-						content="Open website"
+						content="Open&nbsp;website"
 						path={pages_url}
 					/>
 				)
@@ -59,8 +59,10 @@ language = getRoutesForImage(language);
 	div.project {
 		min-width: 60vw;
 		min-width: 60dvw;
-		max-width: 65vw;
-		max-width: 65dvw;
+		max-width: 70vw;
+		max-width: 70dvw;
+		max-height: 60vh;
+		max-height: 60dvh;
 		transition: all 0.3s;
 		position: absolute;
 		display: flex;
@@ -111,10 +113,14 @@ language = getRoutesForImage(language);
 		p {
 			font-size: 1em;
 		}
+		img {
+			height: 35px;
+		}
 	}
 	@media screen and (max-height: 650px) {
 		div.project {
 			min-height: 40dvh;
+			top: 75px;
 		}
 		p {
 			font-size: 1.5em;
@@ -129,6 +135,10 @@ language = getRoutesForImage(language);
 	@media screen and (max-height: 450px) {
 		p {
 			font-size: 1em;
+		}
+		div.project {
+			top: 5vh;
+			top: 5dvh;
 		}
 	}
 </style>
