Small changes to the layout in name of responsivness

--- a/src/components/LinkButtonProjects.astro
+++ b/src/components/LinkButtonProjects.astro
@@ -46,7 +46,7 @@ const { content, id, path } = Astro.props;
 
 	@media screen and (max-width: 667px) {
 		button {
-			width: 90%;
+			font-size: 1em;
 		}
 	}
 </style>
