--- a/src/components/ProjectCounter.astro
+++ b/src/components/ProjectCounter.astro
@@ -115,6 +115,11 @@ const genDivs = (num: number): string => {
 			font-weight: bold;
 		}
 	}
+	@media screen and (max-width: 1500px) {
+		#wrap {
+			bottom: 50px;
+		}
+	}
 	@media screen and (max-width: 900px) {
 		#wrap {
 			h3 {
@@ -128,6 +133,11 @@ const genDivs = (num: number): string => {
 	@media screen and (max-width: 700px) {
 		#wrap {
 			width: 60%;
+		}
+	}
+	@media screen and (max-width: 450px) {
+		#wrap {
+			width: 80%;
 		}
 	}
 	@media screen and (max-width: 500px) {
