--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -9,7 +9,7 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 			<h1>Iker Nieto Garrido</h1>
 			<h2 id="age"></h2>
 			<h3 id="city">León, Spain</h3>
-			<img
+			<!--<img
 				src="/curri_icons/others/linkedin.svg"
 				alt="LinkedIn Logo"
 				id="linkedin"
@@ -20,7 +20,7 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 				alt="Github Logo"
 				id="github"
 				class="links"
-			/>
+			/>-->
 			<img
 				src="/curri_icons/others/cv.svg"
 				alt="CV button"
@@ -68,6 +68,7 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 		}
 		#cv:hover {
 			filter: drop-shadow(0 0 5px var(--cont));
+			cursor: pointer;
 		}
 	}
 </style>
@@ -99,10 +100,10 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 		document.getElementById("city")!,
 		"https://www.google.es/maps/@42.5988904,-5.5671356,3a,75y,10.49h,117.75t/data=!3m6!1e1!3m4!1sfSSR9xEwoRfYVPmFRAxS1A!2e0!7i13312!8i6656?entry=ttu"
 	);
-	openLink(
+	/*openLink(
 		document.getElementById("linkedin")!,
 		"https://www.linkedin.com/in/iker-nieto-79985b232/"
 	);
-	openLink(document.getElementById("github")!, "https://github.com/kinire98");
+	openLink(document.getElementById("github")!, "https://github.com/kinire98");*/
 	openLink(document.getElementById("cv")!, "/IkerNietoCV.pdf");
 </script>
