--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,10 +4,10 @@ import ProjectCard from "../components/ProjectCard.astro";
 import ProjectCounter from "../components/ProjectCounter.astro";
 import orderGithubProjects from "../helpers/orderGithubProjects";
 
-const res = await fetch("https://api.github.com/users/kinire98/repos");
-let json = await res.json();
-//import jsonTest from "../helpers/jsontest";
-//let json = JSON.parse(jsonTest());
+//const res = await fetch("https://api.github.com/users/kinire98/repos");
+//let json = await res.json();
+import jsonTest from "../helpers/jsontest";
+let json = JSON.parse(jsonTest());
 
 json = orderGithubProjects(json);
 ---
@@ -16,8 +16,8 @@ json = orderGithubProjects(json);
 	<div>
 		{
 			json.map((ob: any) => (
-				<ProjectCard
-					name={ob.name}
+				<ProjectCard 
+          name={ob.name}
 					desc={ob.description}
 					url={ob.html_url}
 					language={ob.language}
