--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,12 +1,12 @@
 :root {
-  --black: #000;
-  --white: #eee;
-  --bgc: #222831;
-  --sbgc: #393e4666;
-  --cont:  #00adb5;
-  --cont-trans: #00adb533;
-  --wood: #BFA572;
-  --wood-trans: #BFA57233;
-  --black-transp: #000000dd;
-  --bgc-trans: #22283122;
+	--black: #000;
+	--white: #eee;
+	--bgc: #222831;
+	--sbgc: #393e4666;
+	--cont: #00adb5;
+	--cont-trans: #00adb533;
+	--wood: #bfa572;
+	--wood-trans: #bfa57233;
+	--black-transp: #000000dd;
+	--bgc-trans: #22283122;
 }
