--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -1,5 +1,6 @@
 ---
 import MenuLayout from "../layouts/MenuLayout.astro";
+import LinkButtonAnim from "../components/LinkButtonAnim.astro";
 ---
 
 <MenuLayout title="About me - kinire">
@@ -8,18 +9,11 @@ import MenuLayout from "../layouts/MenuLayout.astro";
  		<h1>Iker Nieto Garrido</h1>
  		<h2 id="age"></h2>
  		<h3 id="city">León, Spain</h3>
- 		<!--<img
- 			src="/curri_icons/others/linkedin.svg"
- 			alt="LinkedIn Logo"
- 			id="linkedin"
- 			class="links"
- 		/>
- 		<img
- 			src="/curri_icons/others/github.svg"
- 			alt="Github Logo"
- 			id="github"
- 			class="links"
- 		/>-->
+    <div>
+      <LinkButtonAnim id="me" content="About me" path="./personal"/>
+      <LinkButtonAnim id="edex" content="Education and experience" path="./education-experience"/>
+      <LinkButtonAnim id="skills" content="My skills" path="./skills"/>
+    </div>
  		<img
  			src="/curri_icons/others/cv.svg"
  			alt="CV button"
@@ -66,6 +60,12 @@ import MenuLayout from "../layouts/MenuLayout.astro";
       cursor: pointer;
       text-decoration: underline;
     }
+    > div {
+      width: 275px;
+      * {
+        margin-block: 15px;
+      }
+    }
 	}
 </style>
 <style is:global>
@@ -80,17 +80,14 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 </style>
 
 <script>
-	import openLink from "../helpers/openLink";
+  import openLink from "../helpers/openLink";
+  import openPage from "../helpers/openPage";
 	function timeDifference(date1: Date, date2: Date): number {
 		var difference = date1.getTime() - date2.getTime();
 		var daysDifference = Math.floor(difference / 1000 / 60 / 60 / 24);
 		return Math.floor(daysDifference / 365);
 	}
-	// Calculate age
-	const birthday = new Date("2005/04/05");
-	const now = new Date(Date.now());
-	const $dinAge = document.getElementById("age")!;
-	$dinAge.innerHTML = timeDifference(now, birthday) + " years";
+	document.getElementById("age")!.innerHTML = timeDifference(new Date(Date.now()), new Date("2005/04/05")) + " years";
 
 	openLink(
 		document.getElementById("city")!,
@@ -103,4 +100,7 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 	openLink(document.getElementById("github")!, "https://github.com/kinire98");*/
 	openLink(document.getElementById("cv")!, "/IkerNietoCV.pdf");
   openLink(document.getElementById("cves")!, "/IkerNietoCVES.pdf");
+  openPage(document.getElementById("me")!, "/about_me/personal");
+  openPage(document.getElementById("edex")!, "/about_me/education-experience");
+  openPage(document.getElementById("skills")!, "/about_me/skills");
 </script>
