Some changes to the about-me page

--- a/src/components/LinkButtonAnim.astro
+++ b/src/components/LinkButtonAnim.astro
@@ -19,14 +19,14 @@ const { id, content, path } = Astro.props;
 		background-color: transparent;
 		font-variant: small-caps;
 		font-weight: bold;
-		width: 100%;
+		width: 90%;
 		color: var(--white);
 		border: none;
 		/*border-radius: 1em;*/
 		font-size: 1.2em;
 		cursor: pointer;
 		letter-spacing: 1px;
-		transition: all 0.5s;
+		transition: all .5s;
 		height: 80px;
 	}
 	button:hover {
