--- a/src/pages/about_me/my-story.astro
+++ b/src/pages/about_me/my-story.astro
@@ -2,5 +2,5 @@
 import MenuLayout from "../../layouts/MenuLayout.astro"
 ---
 <MenuLayout title="My educaction - kinire">
-  <h1>More personal. Maybe I don't do it</h1>
+  <h1>My story</h1>
 </MenuLayout>
