--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -25,7 +25,7 @@ json = orderGithubProjects(json);
 				/>
 			))
 		}
-		<img src="/github.svg" id="img-github" />
+    <img src="/icons/light/github.svg" id="img-github" />
 		<ProjectCounter num={json.length} />
 	</div>
 </MenuLayout>
