--- a/src/pages/about_me/index.astro
+++ b/src/pages/about_me/index.astro
@@ -1,6 +1,6 @@
 ---
-import MenuLayout from "../layouts/MenuLayout.astro";
-import LinkButtonAnim from "../components/LinkButtonAnim.astro";
+import MenuLayout from "../../layouts/MenuLayout.astro";
+import LinkButtonAnim from "../../components/LinkButtonAnim.astro";
 ---
 
 <MenuLayout title="About me - kinire">
@@ -83,8 +83,8 @@ import LinkButtonAnim from "../components/LinkButtonAnim.astro";
 </style>
 
 <script>
-  import openLink from "../helpers/openLink";
-  import openPage from "../helpers/openPage";
+  import openLink from "../../helpers/openLink";
+  import openPage from "../../helpers/openPage";
 	function timeDifference(date1: Date, date2: Date): number {
 		var difference = date1.getTime() - date2.getTime();
 		var daysDifference = Math.floor(difference / 1000 / 60 / 60 / 24);
