--- a/src/pages/about_me/education-experience.astro
+++ b/src/pages/about_me/education-experience.astro
@@ -2,43 +2,65 @@
 import MenuLayout from "../../layouts/MenuLayout.astro"
 ---
 <MenuLayout title="My educaction - kinire">
-  <div id="container-education">
-    <h1>Education</h1>
-    <div>
-      <h2>Superior Technician in <br/> Multiplatform Application Development</h2>
-      <p>IES San Andrés 2023-2025</p>
+  <div id="container">
+    <div id="container-education">
+      <h1>Education</h1>
+      <div>
+        <h2>Superior Technician in <br/> Multiplatform Application Development</h2>
+        <p>IES San Andrés</p>
+        <p>2023-2025</p>
+      </div>
+      <div>
+        <h2>Technician in Microcomputing Systems and Networks</h2>
+        <p>IES San Andrés</p>
+        <p>2021-2023</p>
+        <p>9.5 (Honorable mention)</p>
+      </div>
+      <div>
+        <h2>Mandatory teachings</h2>
+        <p>IES Lancia</p>
+        <p>prev-2021</p>
+        <p>9.48 (Honorable mention)</p>
+      </div>
     </div>
-    <div>
-      <h2>Technician in Microcomputing Systems and Networks</h2>
-      <p>IES San Andrés 2021-2023</p>
-      <p>9.5 (Honorable mention)</p>
+    <div id="container-experience">
+      <h1>Experience</h1>
+      <div>
+        <h2>Intership</h2>
+        <p>Proconsi</p>
+        <p>2023</p>
+      </div>
     </div>
-    <div>
-      <h2>Mandatory teachings</h2>
-      <p>IES Lancia prev-2021</p>
-      <p>9.48 (Honorable mention)</p>
-    </div>
-  </div>
-  <div>
-    <h1>Experience</h1>
-    <div>
-      <h2>Intership</h2>
-      <p>Proconsi</p>
-    </div>
+
   </div>
 </MenuLayout>
 
 <style>
+  #container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    > * {
+      margin-inline: 100px;
+      width: 50%;
+    }
+  }
   #container-education {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     div {
-      background-color: var(--gray-trans);
-      text-align: center;
       margin-block: 5vh;
     }
+  }
+  #container-experience {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
   h2 {
 		font-family: "Rubik", sans-serif !important;
